--- a/apps/default/explore/templates/explore/tags.html
+++ b/apps/default/explore/templates/explore/tags.html
@@ -1,12 +1,12 @@
 
 	<div class="explore-page-container explore-tags">
-		<h4 class="text-center" style="background-image: url('{{CONFIG site_url}}/media/img/tags.svg');"># <?php echo $context['tag']; ?> <span><b><?php echo $context['total_count']; ?></b> {{LANG posts}}</span></h4>
+		<h4 class="text-center" style="background-image: url('{{CONFIG site_url}}/media/img/tags.svg');"># <?php echo $context['tag']; ?> <span><b><?php echo $context['total_count']; ?></b> Publicaciones</span></h4>
 		<?php if ($context['follow']) { ?>
 		<div class="follow__suggestions-cr">
 			<?php if ($context['follow']) { ?>
 			<div class="container">
 				<div class="fluid">
-					<h5>Sugerencias para ti<a href="<?php echo(pxp_link('explore/people')); ?>" data-ajax="ajax_loading.php?app=explore&apph=people" class="pull-right">{{LANG see_all}} <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+					<h5>Sugerencias para ti<a href="<?php echo(pxp_link('explore/people')); ?>" data-ajax="ajax_loading.php?app=explore&apph=people" class="pull-right">Ver todo <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
 					</h5>
 				</div>
 				<div class="owl-carousel" id="follow__suggestions-cr">
