--- a/apps/default/home/templates/home/includes/upload-image.html
+++ b/apps/default/home/templates/home/includes/upload-image.html
@@ -85,14 +85,14 @@
       </span>
         </div>
         <p id="from_camera_button" class="open_camera_">
-			<a href="javascript:void(0);" onclick="open_camera()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M4,4H7L9,2H15L17,4H20A2,2 0 0,1 22,6V18A2,2 0 0,1 20,20H4A2,2 0 0,1 2,18V6A2,2 0 0,1 4,4M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9Z"></path></svg> {{LANG from_camera}}</a>
+			<a href="javascript:void(0);" onclick="open_camera()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M4,4H7L9,2H15L17,4H20A2,2 0 0,1 22,6V18A2,2 0 0,1 20,20H4A2,2 0 0,1 2,18V6A2,2 0 0,1 4,4M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9Z"></path></svg> Toma una foto con la webcam</a>
 		</p>
         <br>
         <?php } ?>
 		
       	<div class="form-group publish">
       		<button type="submit" class="btn btn-info" id="submit_image_btn">Publicar</button>
-      		<button type="reset" class="btn btn-default" id="close-anim-image-modal">{{LANG close}}</button>
+      		<button type="reset" class="btn btn-default" id="close-anim-image-modal">Cerrar</button>
       	</div>
         <input class="hidden" id="upload-images" type="file" name="images[]" multiple accept="image/*">
       	<input class="hidden" type="file" name="filter_image">
