--- a/apps/default/main/templates/modals/delete-fund.html
+++ b/apps/default/main/templates/modals/delete-fund.html
@@ -5,7 +5,7 @@
 			<p>{{LANG delete_funding_text}}</p>
 		</div>
 		<div class="confirm--modal--footer">
-			<button class="btn btn-default" data-confirm--modal-dismiss>{{LANG cancel}}</button>
+			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
 			<button class="btn btn-danger btn-red delete--fund">{{LANG delete}}</button>
 		</div>
 	</div>
