--- a/apps/default/main/templates/modals/edit-post.html
+++ b/apps/default/main/templates/modals/edit-post.html
@@ -10,8 +10,8 @@
 				</div>
 			</div>
 			<div class="modal--footer">
-				<button class="btn btn-default" type="button">{{LANG cancel}}</button>
-				<button class="btn btn-success" type="submit">{{LANG save_changes}}</button>
+				<button class="btn btn-default" type="button">Cancelar</button>
+				<button class="btn btn-success" type="submit">Guardar Cambios</button>
 			</div>
 			<input type="hidden" name="post_id" value="<?php echo($context['post_data']['post_id'] ) ?>" id="post_id">
 		</form>
