--- a/apps/default/notactive/templates/notactive/index.html
+++ b/apps/default/notactive/templates/notactive/index.html
@@ -4,7 +4,7 @@
 
 			<h3>{{LANG account_not_activated}}</h3>
 			<p>{{LANG click_on_activation_link}}</p>
-			<div><a href="<?php echo($config['site_url'].'/signout') ?>">{{LANG logout}}</a></div>
+			<div><a href="<?php echo($config['site_url'].'/signout') ?>">Cerrar sesión</a></div>
 
 		</div>
 	</div>
