--- a/apps/default/profile/templates/profile/js/script.html
+++ b/apps/default/profile/templates/profile/js/script.html
@@ -30,7 +30,7 @@
 					$('li.report-profile').replaceWith($("<li>",{
 						class:'report-profile', 
 					}).append($("<a>",{
-						text:'{{LANG report_user}}'
+						text:'Reportar a este usuario'
 					})).attr('data-modal-menu','report-profile'));
 				}
 
