--- a/apps/default/settings/templates/settings/includes/blocked-users.html
+++ b/apps/default/settings/templates/settings/includes/blocked-users.html
@@ -9,6 +9,6 @@
 		</span>
 	</h4>
 	<button class="btn btn-info unblock-user" id="<?php echo($udata['user_id']) ?>">
-		{{LANG unblock}}
+		Desbloquear
 	</button>
 </div>
