--- a/apps/default/settings/templates/settings/includes/privacy.html
+++ b/apps/default/settings/templates/settings/includes/privacy.html
@@ -12,7 +12,7 @@
 			<div>
 				<select name="p_privacy" class="form-control">
 					<option value="2" <?php if($context['me']['p_privacy'] == 2){ ?> selected <?php } ?>>{{LANG everyone}}</option>
-					<option value="1" <?php if($context['me']['p_privacy'] == 1){ ?> selected <?php } ?>>{{LANG followers}}</option>
+					<option value="1" <?php if($context['me']['p_privacy'] == 1){ ?> selected <?php } ?>>Seguidores</option>
 					<option value="0" <?php if($context['me']['p_privacy'] == 0){ ?> selected <?php } ?>>{{LANG nobody}}</option>
 				</select>
 				<span class="bar"></span>
