--- a/apps/default/settings/templates/settings/includes/profile.html
+++ b/apps/default/settings/templates/settings/includes/profile.html
@@ -1,6 +1,6 @@
 <div class="prof-active">
 	<div class="header">
-		<h4>{{LANG profile_settings}}</h4>
+		<h4>Configuración de perfil</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -10,12 +10,12 @@
 		<div class="pp_mat_input pp_mat_input_50">
 			<input type="text" name="fname" class="form-control" value="<?php echo($context['me']['fname']) ?>">
 			<span class="bar"></span>
-			<label>{{LANG fname}}</label>
+			<label>Nombre</label>
 		</div>
 		<div class="pp_mat_input pp_mat_input_50">
 			<input type="text" name="lname" class="form-control" value="<?php echo($context['me']['lname']) ?>">
 			<span class="bar"></span>
-			<label>{{LANG lname}}</label>
+			<label>Apellido</label>
 		</div>
 		<div class="pp_mat_input">
 			<input type="url2" name="website" class="form-control" value="<?php echo(urldecode($context['me']['website'])) ?>">
