--- a/apps/default/welcome/templates/welcome/forgot.html
+++ b/apps/default/welcome/templates/welcome/forgot.html
@@ -3,7 +3,7 @@
 		<div class="welcome-page-container row">
 			<div class="pp_welcome_sign marginauto pp_welcome_signup pp_welcome_reset">
 			<div class="logo">
-					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> {{LANG sign_in}}</a> 
+					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> Registrarse</a> 
 					<div>
 						<a href="{{CONFIG site_url}}"><img src="{{CONFIG site_url}}/media/img/logo.{{CONFIG logo_extension}}" width="42px" alt="logo"></a>
 					</div>
