--- a/apps/default/confirm/templates/confirm/index.html
+++ b/apps/default/confirm/templates/confirm/index.html
@@ -4,7 +4,7 @@
 			<div class="col-sm-12 col-md-12 pp_signup_intro">
 				<div class="pp_intro_innr">
 					<div>
-						<h1 class="animated fadeInUpBig">{{LANG v2_email_confirmed}}</h1>
+						<h1 class="animated fadeInUpBig">Correo electrónico confirmado</h1>
 						<span class="fluid copyright">Copyright &copy; 2018 {{CONFIG site_name}}</span>
 					</div>
 				</div>
