--- a/apps/default/home/templates/home/includes/comments.html
+++ b/apps/default/home/templates/home/includes/comments.html
@@ -24,7 +24,7 @@
 					<img src="{{ME avatar}}" width="34px" height="34px" class="img-circle">
 				</div>
 				<div class="form-group">
-					<input type="text" class="form-control comment" onkeydown="pxp_reply_comment(<?php echo $comment['id']; ?>,event);" placeholder="{{LANG write_comment}}" id="emojionearea_comment<?php echo $comment['id']; ?>">
+					<input type="text" class="form-control comment" onkeydown="pxp_reply_comment(<?php echo $comment['id']; ?>,event);" placeholder="Escribir un comentario" id="emojionearea_comment<?php echo $comment['id']; ?>">
 				</div>
 			</div>
 			<div class="reply_commenting_overlay hidden">
@@ -33,7 +33,7 @@
 		</form>
 	</div>
 	<?php if ($comment['is_owner']) { ?>
-		<span class="pull-right delcomment" title="{{LANG delete_comment}}" onclick="delete_commnet(<?php echo($comment['id']) ?>);">
+		<span class="pull-right delcomment" title="Eliminar comentario" onclick="delete_commnet(<?php echo($comment['id']) ?>);">
 			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
 		</span>
 	<?php } ?>
