--- a/apps/default/home/templates/home/includes/create-story.html
+++ b/apps/default/home/templates/home/includes/create-story.html
@@ -3,7 +3,7 @@
 		<img src="{{ME avatar}}" class="img-circle">
 		<span>{{ME username}}</span>
 		<svg class="feather feather-arrow" width="18" height="18" viewBox="0 0 48 48" fill="#757575"><path d="M20 34l10-10 -10-10z"></path></svg>
-		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg> {{LANG story}}</span>
+		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg> Historia</span>
 		<div id="pp_loader"><div class="speeding_wheel"></div></div>
 	</div>
   	<form class="form" id="add-story-from" action="{{CONFIG site_url}}/aj/story/add">
@@ -18,7 +18,7 @@
   		</div>
       	<div class="form-group publish">
       		<button type="submit" class="btn btn-info">Publicar</button>
-      		<button type="reset" class="btn btn-default" id="close-anim-modal">{{LANG close}}</button>
+      		<button type="reset" class="btn btn-default" id="close-anim-modal">Cerrar</button>
       	</div>
       	<input class="hidden" id="story-file" type="file" name="file" accept="image/*, video/*">
         <input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
