--- a/apps/default/home/templates/home/includes/sidebar.html
+++ b/apps/default/home/templates/home/includes/sidebar.html
@@ -74,7 +74,7 @@
 
 		<?php if ($config['pro_system'] == 'on' && !empty($context['pro_members'])) { ?>
 			<div class="stories">
-				<h5>{{LANG pro_members}}
+				<h5>Miembros Pro
 				</h5>
 				<div class="fluid list">
 					<?php if ($context['pro_members']) {
@@ -95,9 +95,9 @@
 
 		<?php if ($config['raise_money'] == 'on' && !empty($context['funding'])) { ?>
 			<div class="stories">
-				<h5>{{LANG funding_requets}}
+				<h5>Solicitudes de financiación
 					<?php if (!empty($context['funding'])) { ?>
-						<span class="create-new-post btn btn-link pull-right"><a href="{{CONFIG site_url}}/funding" data-ajax="ajax_loading.php?app=funding&apph=funding">{{LANG see_all}}</a></span>
+						<span class="create-new-post btn btn-link pull-right"><a href="{{CONFIG site_url}}/funding" data-ajax="ajax_loading.php?app=funding&apph=funding">Ver todo</a></span>
 					<?php } ?>
 				</h5>
 				<div class="fluid list">
@@ -110,7 +110,7 @@
 								</div>
 								<div class="caption">
 									<a href="{{CONFIG site_url}}/funding/<?php echo(!empty($user->hashed_id) ? $user->hashed_id : $user->id) ?>" data-ajax="ajax_loading.php?app=funding&apph=funding&id=<?php echo(!empty($user->hashed_id) ? $user->hashed_id : $user->id) ?>"><?php echo $user->title; ?></a>
-									<p><?php echo $context['currency_symbol'].$user->raised; ?> {{LANG raised_of}} <?php echo $context['currency_symbol'].$user->amount; ?></p>
+									<p><?php echo $context['currency_symbol'].$user->raised; ?> Planteado de <?php echo $context['currency_symbol'].$user->amount; ?></p>
 								</div>
 								<div class="clear"></div>
 							</div>
@@ -143,7 +143,7 @@
 
 		<?php if ($context['activities']) { ?>
 			<div class="stories activities">
-				<h5>{{LANG activities}}
+				<h5>Ocupaciones
 					<span class="reload_icon pull-right" id="load_more_activities_" onclick="get_more_activities()">
 						<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="currentColor" d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" /></svg>
 					</span>
