--- a/apps/default/home/templates/home/includes/story.html
+++ b/apps/default/home/templates/home/includes/story.html
@@ -15,7 +15,7 @@
 		</div>
 
 		<?php if ($context['us_data']['user_id'] == $context['user']['user_id']) { ?>
-			<div class="delete-story" title="{{LANG delete}}">
+			<div class="delete-story" title="Borrar">
 				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
 			</div>
 		<?php } ?>
