--- a/apps/default/home/templates/home/includes/upload-video.html
+++ b/apps/default/home/templates/home/includes/upload-video.html
@@ -3,7 +3,7 @@
 		<img src="{{ME avatar}}" class="img-circle">
 		<span>{{ME username}}</span>
 		<svg class="feather feather-arrow" width="18" height="18" viewBox="0 0 48 48" fill="#757575"><path d="M20 34l10-10 -10-10z"></path></svg>
-		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg> {{LANG video}}</span>
+		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg> Video</span>
 		<div id="pp_loader">
 		<span style="float:left;margin-right:60px;margin-top:-10px;">0%</span>
 			<div class="speeding_wheel"></div>
@@ -24,7 +24,7 @@
 		</div>
       	<div class="form-group publish">
       		<button type="submit" class="btn btn-info">Publicar</button>
-      		<button type="reset" class="btn btn-default" id="close-anim-modal">{{LANG close}}</button>
+      		<button type="reset" class="btn btn-default" id="close-anim-modal">Cerrar</button>
       	</div>
       	<input class="hidden" type="file" name="video" id="post-video" accept="video/*">
       	<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
