--- a/apps/default/home/templates/home/js/publisher-box.html
+++ b/apps/default/home/templates/home/js/publisher-box.html
@@ -96,7 +96,7 @@
             </div>
             <div class="form-group publish">
                 <button type="submit" class="btn btn-info">
-                    <i class="la la-paper-plane"></i> {{LANG save_changes}}
+                    <i class="la la-paper-plane"></i> Guardar Cambios
                 </button>
                 <button type="reset" class="btn btn-default" id="close-anim-modal">
                     <i class="la la-ban"></i> Cerrar
