--- a/apps/default/main/templates/header/header.html
+++ b/apps/default/main/templates/header/header.html
@@ -97,7 +97,7 @@
                                     <small class="badge" id="new__notif_follow"></small>
                                 </span>
                                 <div class="dropdown-menu zoom">
-                                    <div class="header">{{LANG follow_requests}}
+                                    <div class="header">Seguir Solicitudes
                                         <a href="{{CONFIG site_url}}/settings/requests/{{ME username}}" data-ajax="ajax_loading.php?app=settings&apph=settings&user={{ME username}}&page=requests">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-check"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg>
                                         </a>
@@ -112,7 +112,7 @@
                         </li>
                     <?php } ?>
                     <?php if (IS_ADMIN) { ?>
-                        <li class="hide_head_link" title="{{LANG admin_panel}}">
+                        <li class="hide_head_link" title="Panel de administrador">
                             <a href="<?php echo(pxp_link('admin-panel')); ?>">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layout"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="3" y1="9" x2="21" y2="9"></line><line x1="9" y1="21" x2="9" y2="9"></line></svg>
                             </a>
@@ -180,7 +180,7 @@
                 <?php } ?>
 				
 				<?php if (IS_ADMIN) { ?>
-					<li title="{{LANG admin_panel}}">
+					<li title="Panel de administrador">
 						<a href="<?php echo(pxp_link('admin-panel')) ?>">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layout"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="3" y1="9" x2="21" y2="9"></line><line x1="9" y1="21" x2="9" y2="9"></line></svg>
 						</a>
