--- a/apps/default/main/templates/js/extra-js.html
+++ b/apps/default/main/templates/js/extra-js.html
@@ -11,7 +11,7 @@
 		var profile_type = object.attr('data-profile-type');
 		if (profile_type == 0 || profile_type == 1) {
 			if(object.hasClass('btn-requested') == true){
-				object.find('span').text("{{LANG follow}}");
+				object.find('span').text("Seguir");
 				object.find('svg').html('<path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line>');
 
 				if (object.hasClass('btn-requested')) {
@@ -19,7 +19,7 @@
 				}
 			}
 			else if(object.hasClass('btn-following') == true){
-				object.find('span').text("{{LANG follow}}");
+				object.find('span').text("Seguir");
 				object.find('svg').html('<path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line>');
 
 				if (object.hasClass('btn-following')) {
@@ -37,7 +37,7 @@
 		}
 		else{
 			if (object.hasClass('btn-following') == false) {
-				object.find('span').text("{{LANG following}}");
+				object.find('span').text("Siguiendo");
 				object.find('svg').html('<path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline>');
 
 				if (!object.hasClass('btn-following')) {
@@ -45,7 +45,7 @@
 				}
 			}
 			else if(object.hasClass('btn-following') == true){
-				object.find('span').text("{{LANG follow}}");
+				object.find('span').text("Seguir");
 				object.find('svg').html('<path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line>');
 
 				if (object.hasClass('btn-following')) {
