--- a/apps/default/main/templates/modals/embed_post.html
+++ b/apps/default/main/templates/modals/embed_post.html
@@ -5,7 +5,7 @@
 			<textarea cols="30" rows="3" class="form-control" id="embed_post" onclick="select()"></textarea>
 		</div>
 		<div class="confirm--modal--footer">
-			<button class="btn btn-default" data-confirm--modal-dismiss>{{LANG cancel}}</button>
+			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
 			<button class="btn btn-success copy-embed-code">{{LANG copy}}</button>
 		</div>
 	</div>
