--- a/apps/default/settings/templates/settings/includes/general.html
+++ b/apps/default/settings/templates/settings/includes/general.html
@@ -1,6 +1,6 @@
 <div class="sett-active">
 	<div class="header">
-		<h4>{{LANG general}} {{LANG settings}}</h4>
+		<h4>General {{LANG settings}}</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
