--- a/apps/default/settings/templates/settings/includes/withdraw.html
+++ b/apps/default/settings/templates/settings/includes/withdraw.html
@@ -11,7 +11,7 @@
 			<div class="col-md-1"></div>
 		</div>
 		<div class="header">
-			<h4>{{LANG withdraw}} {{LANG settings}}</h4>
+			<h4>Confirmacion de Retirada</h4>
 			<div class="clear"></div>
 		</div>
 		<hr>
