--- a/apps/default/settings/templates/settings/includes/withdraw_list.html
+++ b/apps/default/settings/templates/settings/includes/withdraw_list.html
@@ -13,11 +13,11 @@
 	<td data-ad-status="<?php echo $context['ad']->id; ?>" width="150">
 		<span>
 			<?php if ($context['user_withdrawal']->status == 1){ ?>
-				{{LANG paid}}
+				Pagado
 			<?php }elseif($context['user_withdrawal']->status == 0){ ?>
-				{{LANG pending}}
+				Pendiente
 			<?php }else{ ?>
-				{{LANG declined}}
+				Rechazado
 			<?php } ?>
 		</span>
 	</td>
