--- a/apps/default/settings/templates/settings/index.html
+++ b/apps/default/settings/templates/settings/index.html
@@ -8,7 +8,7 @@
 			<form id="edit-avatar">
 				<h5><?php echo($context['me']['name']) ?></h5>
 				<button type="button" class="btn btn-info btn-shadow" onclick="$('#avatar').trigger('click');">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg> {{LANG change_avatar}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg> Cambiar Avatar
 				</button>
 				<input type="file" accept="image/*" name="avatar" id="avatar" class="hidden">
 				<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
@@ -26,7 +26,7 @@
 			</li>
 			<li class="list-group-item prof-hover <?php if($context['page'] == 'profile'){ ?>active prof-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/profile/<?php echo $context['me']['user_id'] ?>" data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=profile">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg> {{LANG profile_settings}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg> Configuración de perfil
 				</a>
 			</li>
 			<li class="list-group-item pass-hover <?php if($context['page'] == 'password'){ ?>active pass-active<?php } ?>">
@@ -36,7 +36,7 @@
 			</li>
 			<li class="list-group-item priv-hover <?php if($context['page'] == 'privacy'){ ?>active priv-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/privacy/<?php echo $context['me']['user_id'] ?>" data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=privacy">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg> {{LANG privacy}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg> Privado
 				</a>
 			</li>
 			<li class="list-group-item noti-hover <?php if($context['page'] == 'notifications'){ ?>active noti-active<?php } ?>">
@@ -61,7 +61,7 @@
 			<?php if (!$context['me']['verified']) { ?>
 			<li class="list-group-item verf-hover <?php if($context['page'] == 'verification'){ ?>active verf-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/verification/<?php echo $context['me']['user_id'] ?>"  data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=verification">
-					<svg class="feather" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9L10,17Z"></path></svg> {{LANG verification}}
+					<svg class="feather" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9L10,17Z"></path></svg> Verificación
 				</a>
 			</li>
 			<?php } ?>
@@ -72,27 +72,27 @@
 			</li>
 			<li class="list-group-item blok-hover <?php if($context['page'] == 'blocked'){ ?>active blok-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/blocked/<?php echo $context['me']['user_id'] ?>"  data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=blocked">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-slash"><circle cx="12" cy="12" r="10"></circle><line x1="4.93" y1="4.93" x2="19.07" y2="19.07"></line></svg> {{LANG blocked_users}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-slash"><circle cx="12" cy="12" r="10"></circle><line x1="4.93" y1="4.93" x2="19.07" y2="19.07"></line></svg> Usuarios bloqueados
 				</a>
 			</li>
 			<?php if ($config['affiliate_system'] == 1) { ?>
 			<li class="list-group-item affiliates-hover <?php if($context['page'] == 'my_affiliates'){ ?>active affiliates-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/my_affiliates/<?php echo $context['me']['user_id'] ?>"  data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=my_affiliates">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg> {{LANG my_affiliates}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg> Mis afiliados
 				</a>
 			</li>
 			<?php } ?>
 			<?php if ($config['withdraw_system'] == 'on') { ?>
 			<li class="list-group-item withdraw-hover <?php if($context['page'] == 'withdraw'){ ?>active withdraw-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/withdraw/<?php echo $context['me']['user_id'] ?>"  data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=withdraw">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg> {{LANG withdraw}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg> Retirada
 				</a>
 			</li>
 			<?php } ?>
 			<?php if ($config['delete_account'] == 'on') { ?>
 				<li class="list-group-item delt-hover <?php if($context['page'] == 'delete'){ ?>active delt-active<?php } ?>">
 					<a href="{{CONFIG site_url}}/settings/delete/<?php echo $context['me']['user_id'] ?>" data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=delete">
-						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg> {{LANG delete_account}}
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg> Borrar cuenta
 					</a>
 				</li>
 
